--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
   <link rel="stylesheet" href="css/style.css">
-  <title>NAFSFA DISTINGUISHED PERSONALITIES</title>
+  <title>CHIEF OF AIR STAFF LEGACY</title>
 </head>
 <body>
   <header>
@@ -21,12 +21,12 @@
       <div class="welcome-content">
         <h2 class="logo-content">NAFSFA INTERACTIVE EXPERIENCE CENTER</h2>
         <h1 class="welcome-heading">
-          WELCOME TO THE NAFSFA DISTINGUISHED PERSONALITIES
+          WELCOME TO THE CHIEF OF AIR STAFF LEGACY
         </h1>
-        <P class="welcome-description">Discover the distinguished leaders who have shaped NAFSFA's legacy through their exceptional service and dedication</P>
+        <P class="welcome-description">Explore the remarkable contributions and transformational leadership of the Chiefs of Air Staff who have shaped the Nigerian Air Force through the years</P>
       </div>
       <div class="welcome-btn glass-background">
-        <a href="distinguished-personalities.html">Explore Sections <i class="fa fa-arrow-right"></i></a>
+        <a href="explore-years.html">Explore Years <i class="fa fa-arrow-right"></i></a>
       </div>
     </div>
   </header>
