--- a/commanders-081-pag.html
+++ b/commanders-081-pag.html
@@ -521,7 +521,7 @@
     <nav class="navbar glass-background">
       <div class="navbar-content">
         <div class="back-button">
-          <a href="distinguished-personalities.html" class="back-btn glass-background">
+          <a href="explore-years.html" class="back-btn glass-background">
             <i class="fas fa-arrow-left"></i>
             <span>Back to Sections</span>
           </a>
