--- a/explore-years.html
+++ b/explore-years.html
@@ -26,49 +26,49 @@
             </a>
           </div>
         <div class="section glass-background decade-60s">
-            <a href="gradient-transition.html?section=1960s&page=chiefs-accounts-budget.html">
+            <a href="gradient-transition.html?section=1960s&page=chiefs-1960s.html">
               <img src="img/unsplash_DUCsPrpcNaw.png" alt="">
               <h2>1963 - 1969</h2>
               <p>The founding era of the Nigerian Air Force and its first designated chiefs</p>
             </a>
           </div>
           <div class="section glass-background decade-70s">
-            <a href="gradient-transition.html?section=1970s&page=commanders-081-pag.html">
+            <a href="gradient-transition.html?section=1970s&page=chiefs-1970s.html">
               <img src="img/unsplash_gNPb-LuL0SM.png" alt="">
               <h2>1970 - 1979</h2>
               <p>Post-civil war reconstruction and modernization of the Air Force</p>
             </a>
           </div>
           <div class="section glass-background decade-80s">
-            <a href="gradient-transition.html?section=1980s&page=commandants-nafsfa.html">
+            <a href="gradient-transition.html?section=1980s&page=chiefs-1980s.html">
               <img src="img/unsplash_gNPb-LuL0SM (1).png" alt="">
               <h2>1980 - 1989</h2>
               <p>Expansion and technological advancement of NAF operations</p>
             </a>
           </div>
           <div class="section glass-background decade-90s">
-            <a href="gradient-transition.html?section=1990s&page=commandants-nafsfa.html">
+            <a href="gradient-transition.html?section=1990s&page=chiefs-1990s.html">
               <img src="img/unsplash_gNPb-LuL0SM (2).png" alt="">
               <h2>1990 - 1999</h2>
               <p>Democratic transition and enhanced operational capabilities</p>
             </a>
           </div>
           <div class="section glass-background decade-2000s">
-            <a href="gradient-transition.html?section=2000s&page=commandants-nafsfa.html">
+            <a href="gradient-transition.html?section=2000s&page=chiefs-2000s.html">
               <img src="img/unsplash_gNPb-LuL0SM (3).png" alt="">
               <h2>2000 - 2009</h2>
               <p>New millennium challenges and counter-terrorism operations</p>
             </a>
           </div>
           <div class="section glass-background decade-2010s">
-            <a href="gradient-transition.html?section=2010s&page=commandants-nafsfa.html">
+            <a href="gradient-transition.html?section=2010s&page=chiefs-2010s.html">
               <img src="img/unsplash_gNPb-LuL0SM (4).png" alt="">
               <h2>2010 - 2019</h2>
               <p>Modern warfare adaptation and regional security operations</p>
             </a>
           </div>
           <div class="section glass-background decade-2020s">
-            <a href="gradient-transition.html?section=2020s&page=commandants-nafsfa.html">
+            <a href="gradient-transition.html?section=2020s&page=chiefs-2020s.html">
               <img src="img/unsplash_1MNnM1TPTRs.png" alt="">
               <h2>2020 - 2025</h2>
               <p>Contemporary leadership and future-focused strategic initiatives</p>
