--- a/gradient-transition.html
+++ b/gradient-transition.html
@@ -16,24 +16,59 @@
       </div>
     </div>
 
-    <!-- Chiefs of Accounts Section -->
-    <div class="gradient-section chiefs-gradient" data-section="chiefs">
+    <!-- 1960s Section -->
+    <div class="gradient-section decade-1960s-gradient" data-section="1960s">
       <div class="gradient-content">
-        <h2>Chiefs of Accounts & Budget</h2>
+        <h2>1963 - 1969</h2>
+        <p class="decade-subtitle">The Founding Era</p>
       </div>
     </div>
 
-    <!-- Commanders 081 PAG Section -->
-    <div class="gradient-section commanders-gradient" data-section="commanders">
+    <!-- 1970s Section -->
+    <div class="gradient-section decade-1970s-gradient" data-section="1970s">
       <div class="gradient-content">
-        <h2>Commanders 081 PAG</h2>
+        <h2>1970 - 1979</h2>
+        <p class="decade-subtitle">Post-Civil War Era</p>
       </div>
     </div>
 
-    <!-- Commandants NAFSFA Section -->
-    <div class="gradient-section commandants-gradient" data-section="commandants">
+    <!-- 1980s Section -->
+    <div class="gradient-section decade-1980s-gradient" data-section="1980s">
       <div class="gradient-content">
-        <h2>Commandants NAFSFA</h2>
+        <h2>1980 - 1989</h2>
+        <p class="decade-subtitle">Expansion Era</p>
+      </div>
+    </div>
+
+    <!-- 1990s Section -->
+    <div class="gradient-section decade-1990s-gradient" data-section="1990s">
+      <div class="gradient-content">
+        <h2>1990 - 1999</h2>
+        <p class="decade-subtitle">Democratic Transition</p>
+      </div>
+    </div>
+
+    <!-- 2000s Section -->
+    <div class="gradient-section decade-2000s-gradient" data-section="2000s">
+      <div class="gradient-content">
+        <h2>2000 - 2009</h2>
+        <p class="decade-subtitle">New Millennium</p>
+      </div>
+    </div>
+
+    <!-- 2010s Section -->
+    <div class="gradient-section decade-2010s-gradient" data-section="2010s">
+      <div class="gradient-content">
+        <h2>2010 - 2019</h2>
+        <p class="decade-subtitle">Modern Warfare</p>
+      </div>
+    </div>
+
+    <!-- 2020s Section -->
+    <div class="gradient-section decade-2020s-gradient" data-section="2020s">
+      <div class="gradient-content">
+        <h2>2020 - 2025</h2>
+        <p class="decade-subtitle">Contemporary Era</p>
       </div>
     </div>
   </div>
