Implement navigation state storage for decade sections and update links in explore years page

--- a/chiefs-1970s.html
+++ b/chiefs-1970s.html
@@ -106,6 +106,9 @@
           card.style.transform = 'translateY(0)';
         }, 200 + (index * 150));
       });
+
+      // Store current section on page load
+      navState.storeCurrentSection('1970s');
     });
   </script>
 </body>
