--- a/chiefs-1990s.html
+++ b/chiefs-1990s.html
@@ -130,6 +130,9 @@
           card.style.transform = 'translateY(0)';
         }, 200 + (index * 150));
       });
+
+      // Store current section on page load
+      navState.storeCurrentSection('1990s');
     });
   </script>
 </body>
