--- a/chiefs-2020s.html
+++ b/chiefs-2020s.html
@@ -94,6 +94,9 @@
           card.style.transform = 'translateY(0)';
         }, 200 + (index * 150));
       });
+
+      // Store current section on page load
+      navState.storeCurrentSection('2020s');
     });
   </script>
 </body>
