--- a/explore-years.html
+++ b/explore-years.html
@@ -19,56 +19,56 @@
     <div class="section-container">
       <div class="section-list">
         <div class="section glass-background home">
-            <a href="gradient-transition.html?section=home&page=welcome.html">
+            <a href="welcome.html">
               <img src="img/Welcomescreen.png" alt="">
               <h2>Home</h2>
               <p>Return to home to start afresh</p>
             </a>
           </div>
         <div class="section glass-background decade-60s">
-            <a href="gradient-transition.html?section=1960s&page=chiefs-1960s.html">
+            <a href="chiefs-1960s.html">
               <img src="img/unsplash_DUCsPrpcNaw.png" alt="">
               <h2>1963 - 1969</h2>
               <p>The founding era of the Nigerian Air Force and its first designated chiefs</p>
             </a>
           </div>
           <div class="section glass-background decade-70s">
-            <a href="gradient-transition.html?section=1970s&page=chiefs-1970s.html">
+            <a href="chiefs-1970s.html">
               <img src="img/unsplash_gNPb-LuL0SM.png" alt="">
               <h2>1970 - 1979</h2>
               <p>Post-civil war reconstruction and modernization of the Air Force</p>
             </a>
           </div>
           <div class="section glass-background decade-80s">
-            <a href="gradient-transition.html?section=1980s&page=chiefs-1980s.html">
+            <a href="chiefs-1980s.html">
               <img src="img/unsplash_gNPb-LuL0SM (1).png" alt="">
               <h2>1980 - 1989</h2>
               <p>Expansion and technological advancement of NAF operations</p>
             </a>
           </div>
           <div class="section glass-background decade-90s">
-            <a href="gradient-transition.html?section=1990s&page=chiefs-1990s.html">
+            <a href="chiefs-1990s.html">
               <img src="img/unsplash_gNPb-LuL0SM (2).png" alt="">
               <h2>1990 - 1999</h2>
               <p>Democratic transition and enhanced operational capabilities</p>
             </a>
           </div>
           <div class="section glass-background decade-2000s">
-            <a href="gradient-transition.html?section=2000s&page=chiefs-2000s.html">
+            <a href="chiefs-2000s.html">
               <img src="img/unsplash_gNPb-LuL0SM (3).png" alt="">
               <h2>2000 - 2009</h2>
               <p>New millennium challenges and counter-terrorism operations</p>
             </a>
           </div>
           <div class="section glass-background decade-2010s">
-            <a href="gradient-transition.html?section=2010s&page=chiefs-2010s.html">
+            <a href="chiefs-2010s.html">
               <img src="img/unsplash_gNPb-LuL0SM (4).png" alt="">
               <h2>2010 - 2019</h2>
               <p>Modern warfare adaptation and regional security operations</p>
             </a>
           </div>
           <div class="section glass-background decade-2020s">
-            <a href="gradient-transition.html?section=2020s&page=chiefs-2020s.html">
+            <a href="chiefs-2020s.html">
               <img src="img/unsplash_1MNnM1TPTRs.png" alt="">
               <h2>2020 - 2025</h2>
               <p>Contemporary leadership and future-focused strategic initiatives</p>
@@ -196,6 +196,9 @@
       // Initialize navigation state when page loads
       // Don't clear last section here - we want to preserve it for transitions
       console.log('Explore years page loaded. Last section:', navState.getLastSection());
+      
+      // Store current section as home since we're on the explore years page
+      navState.storeCurrentSection('home');
     });
     
     // Add ripple animation CSS
