Refactor Chiefs pages to enhance header structure and styling

--- a/chiefs-1960s.html
+++ b/chiefs-1960s.html
@@ -19,12 +19,14 @@
             <span>Back to Years</span>
           </a>
         </div>
-        <div class="navbar-title">
-          <h2>Chiefs of Air Staff - 1963-1969</h2>
-          <p>The founding era of the Nigerian Air Force</p>
-        </div>
       </div>
     </nav>
+    <div class="page-header">
+      <div class="page-title-section glass-background">
+        <h1>Chiefs of Air Staff - 1963-1969</h1>
+        <p class="page-subtitle">The founding era of the Nigerian Air Force</p>
+      </div>
+    </div>
   </header>
 
   <section class="chiefs-gallery">
