--- a/chiefs-1990s.html
+++ b/chiefs-1990s.html
@@ -19,12 +19,14 @@
             <span>Back to Years</span>
           </a>
         </div>
-        <div class="navbar-title">
-          <h2>Chiefs of Air Staff - 1990-1999</h2>
-          <p>Democratic transition and enhanced operational capabilities</p>
-        </div>
       </div>
     </nav>
+    <div class="page-header">
+      <div class="page-title-section glass-background">
+        <h1>Chiefs of Air Staff - 1990-1999</h1>
+        <p class="page-subtitle">Democratic transition and enhanced operational capabilities</p>
+      </div>
+    </div>
   </header>
 
   <section class="chiefs-gallery">
