--- a/chiefs-1970s.html
+++ b/chiefs-1970s.html
@@ -19,12 +19,14 @@
             <span>Back to Years</span>
           </a>
         </div>
-        <div class="navbar-title">
-          <h2>Chiefs of Air Staff - 1970-1979</h2>
-          <p>Post-civil war reconstruction and modernization of the Air Force</p>
-        </div>
       </div>
     </nav>
+    <div class="page-header">
+      <div class="page-title-section glass-background">
+        <h1>Chiefs of Air Staff - 1970-1979</h1>
+        <p class="page-subtitle">Post-civil war reconstruction and modernization of the Air Force</p>
+      </div>
+    </div>
   </header>
 
   <section class="chiefs-gallery">
