--- a/gradient-transition.html
+++ b/gradient-transition.html
@@ -12,63 +12,63 @@
     <!-- Home Section -->
     <div class="gradient-section home-gradient" data-section="home">
       <div class="gradient-content">
-        <h2>Home</h2>
+        <!-- Content replaced with background image -->
       </div>
     </div>
 
     <!-- 1960s Section -->
     <div class="gradient-section decade-1960s-gradient" data-section="1960s">
       <div class="gradient-content">
-        <h2>1963 - 1969</h2>
-        <p class="decade-subtitle">The Founding Era</p>
+        <!-- Content replaced with background image -->
       </div>
     </div>
 
     <!-- 1970s Section -->
     <div class="gradient-section decade-1970s-gradient" data-section="1970s">
       <div class="gradient-content">
-        <h2>1970 - 1979</h2>
-        <p class="decade-subtitle">Post-Civil War Era</p>
+        <!-- Content replaced with background image -->
       </div>
     </div>
 
     <!-- 1980s Section -->
     <div class="gradient-section decade-1980s-gradient" data-section="1980s">
       <div class="gradient-content">
-        <h2>1980 - 1989</h2>
-        <p class="decade-subtitle">Expansion Era</p>
+        <!-- Content replaced with background image -->
       </div>
     </div>
 
     <!-- 1990s Section -->
     <div class="gradient-section decade-1990s-gradient" data-section="1990s">
       <div class="gradient-content">
-        <h2>1990 - 1999</h2>
-        <p class="decade-subtitle">Democratic Transition</p>
+        <!-- Content replaced with background image -->
       </div>
     </div>
 
     <!-- 2000s Section -->
     <div class="gradient-section decade-2000s-gradient" data-section="2000s">
       <div class="gradient-content">
-        <h2>2000 - 2009</h2>
-        <p class="decade-subtitle">New Millennium</p>
+        <!-- Content replaced with background image -->
       </div>
     </div>
 
     <!-- 2010s Section -->
     <div class="gradient-section decade-2010s-gradient" data-section="2010s">
       <div class="gradient-content">
-        <h2>2010 - 2019</h2>
-        <p class="decade-subtitle">Modern Warfare</p>
+        <!-- Content replaced with background image -->
       </div>
     </div>
 
     <!-- 2020s Section -->
     <div class="gradient-section decade-2020s-gradient" data-section="2020s">
       <div class="gradient-content">
-        <h2>2020 - 2025</h2>
-        <p class="decade-subtitle">Contemporary Era</p>
+        <!-- Content replaced with background image -->
+      </div>
+    </div>
+
+    <!-- End Section with end-sliding-2.png -->
+    <div class="gradient-section end-gradient" data-section="end">
+      <div class="gradient-content">
+        <!-- Content replaced with background image -->
       </div>
     </div>
   </div>
