Add historical sections for Chiefs of Air Staff from 1967 to 2027
- Created HTML files for each decade: 1977-1987, 1987-1997, 1997-2007, 2007-2017, and 2017-2027.
- Updated gradient transition styles to reflect the new sections.
- Modified explore-years.html to link to the new decade sections with updated descriptions.
- Adjusted JavaScript for navigation and gradient transitions to accommodate the new section structure.
- Ensured consistent styling and functionality across all new pages.

--- a/chiefs-1967-1977.html
+++ b/chiefs-1967-1977.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/sections.css">
   <link rel="stylesheet" href="css/profiles.css">
-  <title>Chiefs of Air Staff - 1970s</title>
+  <title>Chiefs of Air Staff - 1967-1977</title>
 </head>
 <body>
   <header>
@@ -23,14 +23,62 @@
     </nav>
     <div class="page-header">
       <div class="page-title-section glass-background">
-        <h1>Chiefs of Air Staff - 1970-1979</h1>
-        <p class="page-subtitle">Post-civil war reconstruction and modernization of the Air Force</p>
+        <h1>Chiefs of Air Staff - 1967-1977</h1>
+        <p class="page-subtitle">The founding era and post-civil war reconstruction</p>
       </div>
     </div>
   </header>
 
   <section class="chiefs-gallery">
     <div class="chiefs-grid">
+      <!-- Colonel Gerhard Kahtz (1963-1965) -->
+      <div class="chief-card glass-background" onclick="showProfile('kahtz')">
+        <div class="chief-image">
+          <img src="img/chiefs/image1.png" alt="Colonel Gerhard Kahtz" onerror="this.src='img/avatar-military.png'">
+        </div>
+        <div class="chief-info">
+          <h3>Colonel Gerhard Kahtz</h3>
+          <p class="service-period">1963 - 1965</p>
+          <p class="chief-title">1st Chief of Air Staff</p>
+        </div>
+      </div>
+
+      <!-- Colonel W Timming (1965-1966) -->
+      <div class="chief-card glass-background" onclick="showProfile('timming')">
+        <div class="chief-image">
+          <img src="img/chiefs/image2.png" alt="Colonel W Timming" onerror="this.src='img/avatar-military.png'">
+        </div>
+        <div class="chief-info">
+          <h3>Colonel W Timming</h3>
+          <p class="service-period">1965 - 1966</p>
+          <p class="chief-title">2nd Chief of Air Staff</p>
+        </div>
+      </div>
+
+      <!-- Brigadier Kurubo (1966-1967) -->
+      <div class="chief-card glass-background" onclick="showProfile('kurubo')">
+        <div class="chief-image">
+          <img src="img/chiefs/image3.jpg" alt="Brigadier Kurubo" onerror="this.src='img/avatar-military.png'">
+        </div>
+        <div class="chief-info">
+          <h3>Brigadier Kurubo</h3>
+          <p class="service-period">1966 - 1967</p>
+          <p class="chief-title">3rd Chief of Air Staff</p>
+        </div>
+      </div>
+
+      <!-- Colonel Shittu A Alao (1967-1969) -->
+      <div class="chief-card glass-background" onclick="showProfile('alao')">
+        <div class="chief-image">
+          <img src="img/chiefs/image4.png" alt="Colonel Shittu A Alao" onerror="this.src='img/avatar-military.png'">
+        </div>
+        <div class="chief-info">
+          <h3>Colonel Shittu A Alao</h3>
+          <p class="service-period">1967 - 1969</p>
+          <p class="chief-title">4th Chief of Air Staff</p>
+        </div>
+      </div>
+
       <!-- Brigadier Emmanuel E Ikwue (1969-1975) -->
       <div class="chief-card glass-background" onclick="showProfile('ikwue')">
         <div class="chief-image">
@@ -110,7 +158,7 @@
       });
 
       // Store current section on page load
-      navState.storeCurrentSection('1970s');
+      navState.storeCurrentSection('1967-1977');
     });
   </script>
 </body>
