--- a/chiefs-1987-1997.html
+++ b/chiefs-1987-1997.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/sections.css">
   <link rel="stylesheet" href="css/profiles.css">
-  <title>Chiefs of Air Staff - 1990s</title>
+  <title>Chiefs of Air Staff - 1987-1997</title>
 </head>
 <body>
   <header>
@@ -23,7 +23,7 @@
     </nav>
     <div class="page-header">
       <div class="page-title-section glass-background">
-        <h1>Chiefs of Air Staff - 1990-1999</h1>
+        <h1>Chiefs of Air Staff - 1987-1997</h1>
         <p class="page-subtitle">Democratic transition and enhanced operational capabilities</p>
       </div>
     </div>
@@ -134,7 +134,7 @@
       });
 
       // Store current section on page load
-      navState.storeCurrentSection('1990s');
+      navState.storeCurrentSection('1987-1997');
     });
   </script>
 </body>
