--- a/chiefs-1997-2007.html
+++ b/chiefs-1997-2007.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/sections.css">
   <link rel="stylesheet" href="css/profiles.css">
-  <title>Chiefs of Air Staff - 1960s</title>
+  <title>Chiefs of Air Staff - 1997-2007</title>
 </head>
 <body>
   <header>
@@ -23,59 +23,59 @@
     </nav>
     <div class="page-header">
       <div class="page-title-section glass-background">
-        <h1>Chiefs of Air Staff - 1963-1969</h1>
-        <p class="page-subtitle">The founding era of the Nigerian Air Force</p>
+        <h1>Chiefs of Air Staff - 1997-2007</h1>
+        <p class="page-subtitle">New millennium challenges and counter-terrorism operations</p>
       </div>
     </div>
   </header>
 
   <section class="chiefs-gallery">
     <div class="chiefs-grid">
-      <!-- Colonel Gerhard Kahtz (1963-1965) -->
-      <div class="chief-card glass-background" onclick="showProfile('kahtz')">
+      <!-- Air Marshal Isaac Mohammed Alfa (1999-2001) -->
+      <div class="chief-card glass-background" onclick="showProfile('alfaisaac')">
         <div class="chief-image">
-          <img src="img/chiefs/image1.png" alt="Colonel Gerhard Kahtz" onerror="this.src='img/avatar-military.png'">
+          <img src="img/chiefs/image13.png" alt="Air Marshal Isaac Mohammed Alfa" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>Colonel Gerhard Kahtz</h3>
-          <p class="service-period">1963 - 1965</p>
-          <p class="chief-title">1st Chief of Air Staff</p>
+          <h3>AM Isaac Mohammed Alfa</h3>
+          <p class="service-period">1999 - 2001</p>
+          <p class="chief-title">13th Chief of Air Staff</p>
         </div>
       </div>
 
-      <!-- Colonel W Timming (1965-1966) -->
-      <div class="chief-card glass-background" onclick="showProfile('timming')">
+      <!-- Air Marshal Jonah Domfa Wuyep (2001-2006) -->
+      <div class="chief-card glass-background" onclick="showProfile('wuyep')">
         <div class="chief-image">
-          <img src="img/chiefs/image2.png" alt="Colonel W Timming" onerror="this.src='img/avatar-military.png'">
+          <img src="img/chiefs/image14.png" alt="Air Marshal Jonah Domfa Wuyep" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>Colonel W Timming</h3>
-          <p class="service-period">1965 - 1966</p>
-          <p class="chief-title">2nd Chief of Air Staff</p>
+          <h3>AM Jonah Domfa Wuyep</h3>
+          <p class="service-period">2001 - 2006</p>
+          <p class="chief-title">14th Chief of Air Staff</p>
         </div>
       </div>
 
-      <!-- Brigadier Kurubo (1966-1967) -->
-      <div class="chief-card glass-background" onclick="showProfile('kurubo')">
+      <!-- Air Chief Marshal Paul Dike (2006-2008) -->
+      <div class="chief-card glass-background" onclick="showProfile('dike')">
         <div class="chief-image">
-          <img src="img/chiefs/image3.jpg" alt="Brigadier Kurubo" onerror="this.src='img/avatar-military.png'">
+          <img src="img/chiefs/image15.png" alt="Air Chief Marshal Paul Dike" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>Brigadier Kurubo</h3>
-          <p class="service-period">1966 - 1967</p>
-          <p class="chief-title">3rd Chief of Air Staff</p>
+          <h3>ACM Paul Dike</h3>
+          <p class="service-period">2006 - 2008</p>
+          <p class="chief-title">15th Chief of Air Staff</p>
         </div>
       </div>
 
-      <!-- Colonel Shittu A Alao (1967-1969) -->
-      <div class="chief-card glass-background" onclick="showProfile('alao')">
+      <!-- Air Chief Marshal Oluseyi Petinrin (2008-2010) -->
+      <div class="chief-card glass-background" onclick="showProfile('petinrin')">
         <div class="chief-image">
-          <img src="img/chiefs/image4.png" alt="Colonel Shittu A Alao" onerror="this.src='img/avatar-military.png'">
+          <img src="img/chiefs/image16.png" alt="Air Chief Marshal Oluseyi Petinrin" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>Colonel Shittu A Alao</h3>
-          <p class="service-period">1967 - 1969</p>
-          <p class="chief-title">4th Chief of Air Staff</p>
+          <h3>ACM Oluseyi Petinrin</h3>
+          <p class="service-period">2008 - 2010</p>
+          <p class="chief-title">16th Chief of Air Staff</p>
         </div>
       </div>
     </div>
@@ -134,7 +134,7 @@
       });
 
       // Store current section on page load
-      navState.storeCurrentSection('1960s');
+      navState.storeCurrentSection('1997-2007');
     });
   </script>
 </body>
