--- a/chiefs-2007-2017.html
+++ b/chiefs-2007-2017.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/sections.css">
   <link rel="stylesheet" href="css/profiles.css">
-  <title>Chiefs of Air Staff - 2010s</title>
+  <title>Chiefs of Air Staff - 2007-2017</title>
 </head>
 <body>
   <header>
@@ -23,7 +23,7 @@
     </nav>
     <div class="page-header">
       <div class="page-title-section glass-background">
-        <h1>Chiefs of Air Staff - 2010-2019</h1>
+        <h1>Chiefs of Air Staff - 2007-2017</h1>
         <p class="page-subtitle">Modern warfare adaptation and regional security operations</p>
       </div>
     </div>
@@ -134,7 +134,7 @@
       });
 
       // Store current section on page load
-      navState.storeCurrentSection('2010s');
+      navState.storeCurrentSection('2007-2017');
     });
   </script>
 </body>
