--- a/gradient-transition.html
+++ b/gradient-transition.html
@@ -16,50 +16,43 @@
       </div>
     </div>
 
-    <!-- 1960s Section -->
-    <div class="gradient-section decade-1960s-gradient" data-section="1960s">
+    <!-- 1967-1977 Section -->
+    <div class="gradient-section decade-1967-1977-gradient" data-section="1967-1977">
       <div class="gradient-content">
         <!-- Content replaced with background image -->
       </div>
     </div>
 
-    <!-- 1970s Section -->
-    <div class="gradient-section decade-1970s-gradient" data-section="1970s">
+    <!-- 1977-1987 Section -->
+    <div class="gradient-section decade-1977-1987-gradient" data-section="1977-1987">
       <div class="gradient-content">
         <!-- Content replaced with background image -->
       </div>
     </div>
 
-    <!-- 1980s Section -->
-    <div class="gradient-section decade-1980s-gradient" data-section="1980s">
+    <!-- 1987-1997 Section -->
+    <div class="gradient-section decade-1987-1997-gradient" data-section="1987-1997">
       <div class="gradient-content">
         <!-- Content replaced with background image -->
       </div>
     </div>
 
-    <!-- 1990s Section -->
-    <div class="gradient-section decade-1990s-gradient" data-section="1990s">
+    <!-- 1997-2007 Section -->
+    <div class="gradient-section decade-1997-2007-gradient" data-section="1997-2007">
       <div class="gradient-content">
         <!-- Content replaced with background image -->
       </div>
     </div>
 
-    <!-- 2000s Section -->
-    <div class="gradient-section decade-2000s-gradient" data-section="2000s">
+    <!-- 2007-2017 Section -->
+    <div class="gradient-section decade-2007-2017-gradient" data-section="2007-2017">
       <div class="gradient-content">
         <!-- Content replaced with background image -->
       </div>
     </div>
 
-    <!-- 2010s Section -->
-    <div class="gradient-section decade-2010s-gradient" data-section="2010s">
-      <div class="gradient-content">
-        <!-- Content replaced with background image -->
-      </div>
-    </div>
-
-    <!-- 2020s Section -->
-    <div class="gradient-section decade-2020s-gradient" data-section="2020s">
+    <!-- 2017-2027 Section -->
+    <div class="gradient-section decade-2017-2027-gradient" data-section="2017-2027">
       <div class="gradient-content">
         <!-- Content replaced with background image -->
       </div>
