--- a/chiefs-1977-1987.html
+++ b/chiefs-1977-1987.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/sections.css">
   <link rel="stylesheet" href="css/profiles.css">
-  <title>Chiefs of Air Staff - 2000s</title>
+  <title>Chiefs of Air Staff - 1977-1987</title>
 </head>
 <body>
   <header>
@@ -23,59 +23,35 @@
     </nav>
     <div class="page-header">
       <div class="page-title-section glass-background">
-        <h1>Chiefs of Air Staff - 2000-2009</h1>
-        <p class="page-subtitle">New millennium challenges and counter-terrorism operations</p>
+        <h1>Chiefs of Air Staff - 1977-1987</h1>
+        <p class="page-subtitle">Expansion and technological advancement of NAF operations</p>
       </div>
     </div>
   </header>
 
   <section class="chiefs-gallery">
     <div class="chiefs-grid">
-      <!-- Air Marshal Isaac Mohammed Alfa (1999-2001) -->
-      <div class="chief-card glass-background" onclick="showProfile('alfaisaac')">
+      <!-- Air Vice-Marshal Abdullahi Dominic Bello (1980-1984) -->
+      <div class="chief-card glass-background" onclick="showProfile('bello')">
         <div class="chief-image">
-          <img src="img/chiefs/image13.png" alt="Air Marshal Isaac Mohammed Alfa" onerror="this.src='img/avatar-military.png'">
+          <img src="img/chiefs/image7.jpg" alt="Air Vice-Marshal Abdullahi Dominic Bello" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AM Isaac Mohammed Alfa</h3>
-          <p class="service-period">1999 - 2001</p>
-          <p class="chief-title">13th Chief of Air Staff</p>
+          <h3>AVM Abdullahi Dominic Bello</h3>
+          <p class="service-period">1980 - 1984</p>
+          <p class="chief-title">7th Chief of Air Staff</p>
         </div>
       </div>
 
-      <!-- Air Marshal Jonah Domfa Wuyep (2001-2006) -->
-      <div class="chief-card glass-background" onclick="showProfile('wuyep')">
+      <!-- Air Marshal Ibrahim M Alfa (1984-1989) -->
+      <div class="chief-card glass-background" onclick="showProfile('alfa')">
         <div class="chief-image">
-          <img src="img/chiefs/image14.png" alt="Air Marshal Jonah Domfa Wuyep" onerror="this.src='img/avatar-military.png'">
+          <img src="img/chiefs/image8.png" alt="Air Marshal Ibrahim M Alfa" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AM Jonah Domfa Wuyep</h3>
-          <p class="service-period">2001 - 2006</p>
-          <p class="chief-title">14th Chief of Air Staff</p>
-        </div>
-      </div>
-
-      <!-- Air Chief Marshal Paul Dike (2006-2008) -->
-      <div class="chief-card glass-background" onclick="showProfile('dike')">
-        <div class="chief-image">
-          <img src="img/chiefs/image15.png" alt="Air Chief Marshal Paul Dike" onerror="this.src='img/avatar-military.png'">
-        </div>
-        <div class="chief-info">
-          <h3>ACM Paul Dike</h3>
-          <p class="service-period">2006 - 2008</p>
-          <p class="chief-title">15th Chief of Air Staff</p>
-        </div>
-      </div>
-
-      <!-- Air Chief Marshal Oluseyi Petinrin (2008-2010) -->
-      <div class="chief-card glass-background" onclick="showProfile('petinrin')">
-        <div class="chief-image">
-          <img src="img/chiefs/image16.png" alt="Air Chief Marshal Oluseyi Petinrin" onerror="this.src='img/avatar-military.png'">
-        </div>
-        <div class="chief-info">
-          <h3>ACM Oluseyi Petinrin</h3>
-          <p class="service-period">2008 - 2010</p>
-          <p class="chief-title">16th Chief of Air Staff</p>
+          <h3>Air Marshal Ibrahim M Alfa</h3>
+          <p class="service-period">1984 - 1989</p>
+          <p class="chief-title">8th Chief of Air Staff</p>
         </div>
       </div>
     </div>
@@ -134,7 +110,7 @@
       });
 
       // Store current section on page load
-      navState.storeCurrentSection('2000s');
+      navState.storeCurrentSection('1977-1987');
     });
   </script>
 </body>
