--- a/chiefs-2017-2027.html
+++ b/chiefs-2017-2027.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/sections.css">
   <link rel="stylesheet" href="css/profiles.css">
-  <title>Chiefs of Air Staff - 2020s</title>
+  <title>Chiefs of Air Staff - 2017-2027</title>
 </head>
 <body>
   <header>
@@ -23,7 +23,7 @@
     </nav>
     <div class="page-header">
       <div class="page-title-section glass-background">
-        <h1>Chiefs of Air Staff - 2020-2025</h1>
+        <h1>Chiefs of Air Staff - 2017-2027</h1>
         <p class="page-subtitle">Contemporary leadership and future-focused strategic initiatives</p>
       </div>
     </div>
@@ -98,7 +98,7 @@
       });
 
       // Store current section on page load
-      navState.storeCurrentSection('2020s');
+      navState.storeCurrentSection('2017-2027');
     });
   </script>
 </body>
