--- a/welcome.html
+++ b/welcome.html
@@ -11,6 +11,11 @@
     />
   <link rel="stylesheet" href="css/style.css">
   <title>CHIEF OF AIR STAFF LEGACY</title>
+  <link
+      rel="icon"
+      href="img/Nigerian_Air_Force-Logo.wine.png"
+      type="image/png"
+    />
 </head>
 <body>
   <header>
