Update logo content for welcome page to reflect correct title

--- a/welcome.html
+++ b/welcome.html
@@ -24,7 +24,7 @@
         <img src="img/Nigerian_Air_Force-Logo.wine.png" alt="">
       </div>
       <div class="welcome-content">
-        <h2 class="logo-content">NAFSFA INTERACTIVE EXPERIENCE CENTER</h2>
+        <h2 class="logo-content">NAFSFA FINANCE SPECIALTY HALL OF FAME</h2>
         <h1 class="welcome-heading">
           WELCOME TO THE CHIEF OF AIR STAFF LEGACY
         </h1>
