--- a/gradient-transition.html
+++ b/gradient-transition.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/all.css">
   <link rel="stylesheet" href="css/gradient-transition.css">
-  <title>NAFSFA Distinguished Personalities</title>
+  <title>CHIEF OF AIR STAFF LEGACY</title>
 </head>
 <body>
   <div class="gradient-container">
