Update titles for Air Chiefs to include full rank names for consistency

--- a/chiefs-1967-1977.html
+++ b/chiefs-1967-1977.html
@@ -97,7 +97,7 @@
           <img src="img/chiefs/image6.png" alt="Air Vice Marshal John Nmadu Yisa-Doko" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AVM John Nmadu Yisa-Doko</h3>
+          <h3>Air Vice Marshal John Nmadu Yisa-Doko</h3>
           <p class="service-period">1975 - 1980</p>
           <p class="chief-title">6th Chief of Air Staff</p>
         </div>
