--- a/chiefs-1987-1997.html
+++ b/chiefs-1987-1997.html
@@ -37,7 +37,7 @@
           <img src="img/chiefs/image9.jpg" alt="Air Marshal Nuraini Oladimeji Omotosho Yussuff" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AM Nuraini O. Yussuff</h3>
+          <h3>Air Marshal Nuraini O. Yussuff</h3>
           <p class="service-period">1989 - 1992</p>
           <p class="chief-title">9th Chief of Air Staff</p>
         </div>
@@ -61,7 +61,7 @@
           <img src="img/chiefs/image11.png" alt="Air Vice Marshal Femi John Femi" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AVM Femi John Femi</h3>
+          <h3>Air Vice Marshal Femi John Femi</h3>
           <p class="service-period">1993 - 1996</p>
           <p class="chief-title">11th Chief of Air Staff</p>
         </div>
@@ -73,7 +73,7 @@
           <img src="img/chiefs/image12.jpg" alt="Air Marshal Nsikak-Abasi Essien Eduok" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AM Nsikak-Abasi E. Eduok</h3>
+          <h3>Air Marshal Nsikak-Abasi E. Eduok</h3>
           <p class="service-period">1996 - 1999</p>
           <p class="chief-title">12th Chief of Air Staff</p>
         </div>
