--- a/chiefs-2007-2017.html
+++ b/chiefs-2007-2017.html
@@ -31,6 +31,18 @@
 
   <section class="chiefs-gallery">
     <div class="chiefs-grid">
+      <!-- Air Chief Marshal Oluseyi Petinrin (2008-2010) -->
+      <div class="chief-card glass-background" onclick="showProfile('petinrin')">
+        <div class="chief-image">
+          <img src="img/chiefs/image16.png" alt="Air Chief Marshal Oluseyi Petinrin" onerror="this.src='img/avatar-military.png'">
+        </div>
+        <div class="chief-info">
+          <h3>Air Chief Marshal Oluseyi Petinrin</h3>
+          <p class="service-period">2008 - 2010</p>
+          <p class="chief-title">16th Chief of Air Staff</p>
+        </div>
+      </div>
+
       <!-- Air Marshal MD Umar (2010-2012) -->
       <div class="chief-card glass-background" onclick="showProfile('umar')">
         <div class="chief-image">
@@ -49,7 +61,7 @@
           <img src="img/chiefs/image18.png" alt="Air Chief Marshal Alex Sabundu Badeh" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>ACM Alex Sabundu Badeh</h3>
+          <h3>Air Chief Marshal Alex Sabundu Badeh</h3>
           <p class="service-period">2012 - 2014</p>
           <p class="chief-title">18th Chief of Air Staff</p>
         </div>
@@ -61,7 +73,7 @@
           <img src="img/chiefs/image19.png" alt="Air Marshal Adesola Nunayon Amosu" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AM Adesola N. Amosu</h3>
+          <h3>Air Marshal Adesola N. Amosu</h3>
           <p class="service-period">2014 - 2015</p>
           <p class="chief-title">19th Chief of Air Staff</p>
         </div>
@@ -73,7 +85,7 @@
           <img src="img/chiefs/image20.png" alt="Air Marshal Sadique Baba Abubakar" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AM Sadique Baba Abubakar</h3>
+          <h3>Air Marshal Sadique Baba Abubakar</h3>
           <p class="service-period">2015 - 2021</p>
           <p class="chief-title">20th Chief of Air Staff</p>
         </div>
