--- a/chiefs-2017-2027.html
+++ b/chiefs-2017-2027.html
@@ -37,7 +37,7 @@
           <img src="img/chiefs/image21.png" alt="Air Marshal Isiaka Oladayo Amao" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AM Isiaka Oladayo Amao</h3>
+          <h3>Air Marshal Isiaka Oladayo Amao</h3>
           <p class="service-period">2021 - 2023</p>
           <p class="chief-title">21st Chief of Air Staff</p>
         </div>
