--- a/chiefs-1977-1987.html
+++ b/chiefs-1977-1987.html
@@ -37,7 +37,7 @@
           <img src="img/chiefs/image7.jpg" alt="Air Vice-Marshal Abdullahi Dominic Bello" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AVM Abdullahi Dominic Bello</h3>
+          <h3>Air Vice Marshal Abdullahi Dominic Bello</h3>
           <p class="service-period">1980 - 1984</p>
           <p class="chief-title">7th Chief of Air Staff</p>
         </div>
