--- a/chiefs-1997-2007.html
+++ b/chiefs-1997-2007.html
@@ -37,7 +37,7 @@
           <img src="img/chiefs/image13.png" alt="Air Marshal Isaac Mohammed Alfa" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AM Isaac Mohammed Alfa</h3>
+          <h3>Air Marshal Isaac Mohammed Alfa</h3>
           <p class="service-period">1999 - 2001</p>
           <p class="chief-title">13th Chief of Air Staff</p>
         </div>
@@ -49,7 +49,7 @@
           <img src="img/chiefs/image14.png" alt="Air Marshal Jonah Domfa Wuyep" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>AM Jonah Domfa Wuyep</h3>
+          <h3>Air Marshal Jonah Domfa Wuyep</h3>
           <p class="service-period">2001 - 2006</p>
           <p class="chief-title">14th Chief of Air Staff</p>
         </div>
@@ -61,21 +61,9 @@
           <img src="img/chiefs/image15.png" alt="Air Chief Marshal Paul Dike" onerror="this.src='img/avatar-military.png'">
         </div>
         <div class="chief-info">
-          <h3>ACM Paul Dike</h3>
+          <h3>Air Chief Marshal Paul Dike</h3>
           <p class="service-period">2006 - 2008</p>
           <p class="chief-title">15th Chief of Air Staff</p>
-        </div>
-      </div>
-
-      <!-- Air Chief Marshal Oluseyi Petinrin (2008-2010) -->
-      <div class="chief-card glass-background" onclick="showProfile('petinrin')">
-        <div class="chief-image">
-          <img src="img/chiefs/image16.png" alt="Air Chief Marshal Oluseyi Petinrin" onerror="this.src='img/avatar-military.png'">
-        </div>
-        <div class="chief-info">
-          <h3>ACM Oluseyi Petinrin</h3>
-          <p class="service-period">2008 - 2010</p>
-          <p class="chief-title">16th Chief of Air Staff</p>
         </div>
       </div>
     </div>
