Add profile details for Air Marshal Sadique Baba Abubakar to chiefs gallery

--- a/chiefs-2017-2027.html
+++ b/chiefs-2017-2027.html
@@ -31,6 +31,18 @@
 
   <section class="chiefs-gallery">
     <div class="chiefs-grid">
+      <!-- Air Marshal Sadique Baba Abubakar (2015-2021) -->
+      <div class="chief-card glass-background" onclick="showProfile('abubakar')">
+        <div class="chief-image">
+          <img src="img/chiefs/image20.png" alt="Air Marshal Sadique Baba Abubakar" onerror="this.src='img/avatar-military.png'">
+        </div>
+        <div class="chief-info">
+          <h3>Air Marshal Sadique Baba Abubakar</h3>
+          <p class="service-period">2015 - 2021</p>
+          <p class="chief-title">20th Chief of Air Staff</p>
+        </div>
+      </div>
+
       <!-- Air Marshal Isiaka Oladayo Amao (2021-2023) -->
       <div class="chief-card glass-background" onclick="showProfile('amao')">
         <div class="chief-image">
