Update Chief of Air Staff to Chief of the Air Staff

--- a/chiefs-1967-1977.html
+++ b/chiefs-1967-1977.html
@@ -39,7 +39,7 @@
         <div class="chief-info">
           <h3>Colonel Gerhard Kahtz</h3>
           <p class="service-period">1963 - 1965</p>
-          <p class="chief-title">1st Chief of Air Staff</p>
+          <p class="chief-title">1st Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -51,7 +51,7 @@
         <div class="chief-info">
           <h3>Colonel W Timming</h3>
           <p class="service-period">1965 - 1966</p>
-          <p class="chief-title">2nd Chief of Air Staff</p>
+          <p class="chief-title">2nd Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -63,7 +63,7 @@
         <div class="chief-info">
           <h3>Brigadier Kurubo</h3>
           <p class="service-period">1966 - 1967</p>
-          <p class="chief-title">3rd Chief of Air Staff</p>
+          <p class="chief-title">3rd Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -75,7 +75,7 @@
         <div class="chief-info">
           <h3>Colonel Shittu A Alao</h3>
           <p class="service-period">1967 - 1969</p>
-          <p class="chief-title">4th Chief of Air Staff</p>
+          <p class="chief-title">4th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -87,7 +87,7 @@
         <div class="chief-info">
           <h3>Brigadier Emmanuel E Ikwue</h3>
           <p class="service-period">1969 - 1975</p>
-          <p class="chief-title">5th Chief of Air Staff</p>
+          <p class="chief-title">5th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -99,7 +99,7 @@
         <div class="chief-info">
           <h3>Air Vice Marshal John Nmadu Yisa-Doko</h3>
           <p class="service-period">1975 - 1980</p>
-          <p class="chief-title">6th Chief of Air Staff</p>
+          <p class="chief-title">6th Chief of the Air Staff</p>
         </div>
       </div>
     </div>
