--- a/chiefs-1977-1987.html
+++ b/chiefs-1977-1987.html
@@ -39,7 +39,7 @@
         <div class="chief-info">
           <h3>Air Vice Marshal Abdullahi Dominic Bello</h3>
           <p class="service-period">1980 - 1984</p>
-          <p class="chief-title">7th Chief of Air Staff</p>
+          <p class="chief-title">7th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -51,7 +51,7 @@
         <div class="chief-info">
           <h3>Air Marshal Ibrahim M Alfa</h3>
           <p class="service-period">1984 - 1989</p>
-          <p class="chief-title">8th Chief of Air Staff</p>
+          <p class="chief-title">8th Chief of the Air Staff</p>
         </div>
       </div>
     </div>
