--- a/chiefs-1987-1997.html
+++ b/chiefs-1987-1997.html
@@ -39,7 +39,7 @@
         <div class="chief-info">
           <h3>Air Marshal Nuraini O. Yussuff</h3>
           <p class="service-period">1989 - 1992</p>
-          <p class="chief-title">9th Chief of Air Staff</p>
+          <p class="chief-title">9th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -51,7 +51,7 @@
         <div class="chief-info">
           <h3>Air Marshal Akin Dada</h3>
           <p class="service-period">1992 - 1993</p>
-          <p class="chief-title">10th Chief of Air Staff</p>
+          <p class="chief-title">10th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -63,7 +63,7 @@
         <div class="chief-info">
           <h3>Air Vice Marshal Femi John Femi</h3>
           <p class="service-period">1993 - 1996</p>
-          <p class="chief-title">11th Chief of Air Staff</p>
+          <p class="chief-title">11th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -75,7 +75,7 @@
         <div class="chief-info">
           <h3>Air Marshal Nsikak-Abasi E. Eduok</h3>
           <p class="service-period">1996 - 1999</p>
-          <p class="chief-title">12th Chief of Air Staff</p>
+          <p class="chief-title">12th Chief of the Air Staff</p>
         </div>
       </div>
     </div>
