--- a/chiefs-1997-2007.html
+++ b/chiefs-1997-2007.html
@@ -39,7 +39,7 @@
         <div class="chief-info">
           <h3>Air Marshal Isaac Mohammed Alfa</h3>
           <p class="service-period">1999 - 2001</p>
-          <p class="chief-title">13th Chief of Air Staff</p>
+          <p class="chief-title">13th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -51,7 +51,7 @@
         <div class="chief-info">
           <h3>Air Marshal Jonah Domfa Wuyep</h3>
           <p class="service-period">2001 - 2006</p>
-          <p class="chief-title">14th Chief of Air Staff</p>
+          <p class="chief-title">14th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -63,7 +63,7 @@
         <div class="chief-info">
           <h3>Air Chief Marshal Paul Dike</h3>
           <p class="service-period">2006 - 2008</p>
-          <p class="chief-title">15th Chief of Air Staff</p>
+          <p class="chief-title">15th Chief of the Air Staff</p>
         </div>
       </div>
     </div>
