--- a/chiefs-2007-2017.html
+++ b/chiefs-2007-2017.html
@@ -39,7 +39,7 @@
         <div class="chief-info">
           <h3>Air Chief Marshal Oluseyi Petinrin</h3>
           <p class="service-period">2008 - 2010</p>
-          <p class="chief-title">16th Chief of Air Staff</p>
+          <p class="chief-title">16th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -51,7 +51,7 @@
         <div class="chief-info">
           <h3>Air Marshal MD Umar</h3>
           <p class="service-period">2010 - 2012</p>
-          <p class="chief-title">17th Chief of Air Staff</p>
+          <p class="chief-title">17th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -63,7 +63,7 @@
         <div class="chief-info">
           <h3>Air Chief Marshal Alex Sabundu Badeh</h3>
           <p class="service-period">2012 - 2014</p>
-          <p class="chief-title">18th Chief of Air Staff</p>
+          <p class="chief-title">18th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -75,7 +75,7 @@
         <div class="chief-info">
           <h3>Air Marshal Adesola N. Amosu</h3>
           <p class="service-period">2014 - 2015</p>
-          <p class="chief-title">19th Chief of Air Staff</p>
+          <p class="chief-title">19th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -87,7 +87,7 @@
         <div class="chief-info">
           <h3>Air Marshal Sadique Baba Abubakar</h3>
           <p class="service-period">2015 - 2021</p>
-          <p class="chief-title">20th Chief of Air Staff</p>
+          <p class="chief-title">20th Chief of the Air Staff</p>
         </div>
       </div>
     </div>
