--- a/chiefs-2017-2027.html
+++ b/chiefs-2017-2027.html
@@ -39,7 +39,7 @@
         <div class="chief-info">
           <h3>Air Marshal Sadique Baba Abubakar</h3>
           <p class="service-period">2015 - 2021</p>
-          <p class="chief-title">20th Chief of Air Staff</p>
+          <p class="chief-title">20th Chief of the Air Staff</p>
         </div>
       </div>
 
@@ -51,7 +51,7 @@
         <div class="chief-info">
           <h3>Air Marshal Isiaka Oladayo Amao</h3>
           <p class="service-period">2021 - 2023</p>
-          <p class="chief-title">21st Chief of Air Staff</p>
+          <p class="chief-title">21st Chief of the Air Staff</p>
         </div>
       </div>
     </div>
