--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
   <link rel="stylesheet" href="css/style.css">
-  <title>CHIEF OF AIR STAFF LEGACY</title>
+  <title>CHIEF OF THE AIR STAFF LEGACY</title>
   <link
       rel="icon"
       href="img/Nigerian_Air_Force-Logo.wine.png"
@@ -26,7 +26,7 @@
       <div class="welcome-content">
         <h2 class="logo-content">NAFSFA FINANCE SPECIALTY HALL OF FAME</h2>
         <h1 class="welcome-heading">
-          WELCOME TO THE CHIEF OF AIR STAFF LEGACY
+          WELCOME TO THE CHIEF OF THE AIR STAFF LEGACY
         </h1>
         <P class="welcome-description">Explore the remarkable contributions and transformational leadership of the Chiefs of Air Staff who have shaped the Nigerian Air Force through the years</P>
       </div>
