Add finance specialty logo and update welcome page content for NAF Finance Specialty

--- a/welcome.html
+++ b/welcome.html
@@ -21,12 +21,12 @@
   <header>
     <div class="welcome-container">
       <div class="army-logo">
-        <img src="img/Nigerian_Air_Force-Logo.wine.png" alt="">
+        <img src="img/finance-specialty-logo.png" alt="">
       </div>
       <div class="welcome-content">
-        <h2 class="logo-content">NAFSFA FINANCE SPECIALTY HALL OF FAME</h2>
+        <h2 class="logo-content">NAF FINANCE SPECIALTY HALL OF FAME</h2>
         <h1 class="welcome-heading">
-          WELCOME TO THE CHIEF OF THE AIR STAFF LEGACY
+          WELCOME TO THE NAF FINANCE SPECIALTY CHIEF OF THE AIR STAFF LEGACY
         </h1>
         <P class="welcome-description">Explore the remarkable contributions and transformational leadership of the Chiefs of Air Staff who have shaped the Nigerian Air Force through the years</P>
       </div>
