Update welcome page content for NAF Finance Specialty to enhance clarity and consistency

--- a/welcome.html
+++ b/welcome.html
@@ -26,9 +26,9 @@
       <div class="welcome-content">
         <h2 class="logo-content">NAF FINANCE SPECIALTY HALL OF FAME</h2>
         <h1 class="welcome-heading">
-          WELCOME TO THE NAF FINANCE SPECIALTY CHIEF OF THE AIR STAFF LEGACY
+          WELCOME TO THE NAF FINANCE SPECIALTY </br>CHIEF OF THE AIR STAFF LEGACY
         </h1>
-        <P class="welcome-description">Explore the remarkable contributions and transformational leadership of the Chiefs of Air Staff who have shaped the Nigerian Air Force through the years</P>
+        <P class="welcome-description">Explore the remarkable contributions of the Chiefs of the Air Staff to the NAF Finance Specialty and their transformational leadership shaping the Nigerian Air Force through the years</P>
       </div>
       <div class="welcome-btn glass-background">
         <a href="explore-years.html">Explore Years <i class="fa fa-arrow-right"></i></a>
