Add Air Marshal Hasan Bala Abubakar profile and contributions to chiefs gallery

--- a/chiefs-2017-2027.html
+++ b/chiefs-2017-2027.html
@@ -54,6 +54,18 @@
           <p class="chief-title">21st Chief of the Air Staff</p>
         </div>
       </div>
+
+      <!-- Air Marshal Hasan Bala Abubakar (2023-Present) -->
+      <div class="chief-card glass-background" onclick="showProfile('hasan_abubakar')">
+        <div class="chief-image">
+          <img src="img/chiefs/image22.jpg" alt="Air Marshal Hasan Bala Abubakar" onerror="this.src='img/avatar-military.png'">
+        </div>
+        <div class="chief-info">
+          <h3>Air Marshal Hasan Bala Abubakar</h3>
+          <p class="service-period">2023 - Present</p>
+          <p class="chief-title">22nd Chief of the Air Staff</p>
+        </div>
+      </div>
     </div>
   </section>
 
